--- a/runtime/syntax/snobol4.yaml
+++ b/runtime/syntax/snobol4.yaml
@@ -13,20 +13,19 @@ rules:
   - identifier.class: "\\b(?i:(input|output|terminal))\\b"
   - identifier.class: "\\b(?i:(arb|bal|fail|fence|rem|epsilon))\\b"
   - identifier.class: "\\b(?i:(null|true|false|digits))\\b"
-  - identifier.class: "\\b(?i:(bslash|bksp|bs|cr|fslash|ff|ht|lf|nl|nul|tab|vt))\\b"
   - identifier.class: "\\b(?i:(any|arbno|break|breakx|fence|len|notany|pos|rpos|rtab|span|tab))\\b"
   - identifier.class: "\\b(?i:(code|eval))\\b"
   - identifier.class: "\\b(?i:(array|copy|data|field|item|prototype|rsort|sort|table))\\b"
   - identifier.class: "\\b(?i:(ln|remdr))\\b"
   - identifier.class: "\\b(?i:(differ|ident|integer|lt|le|gt|ge|eq|ne|llt|lle|lgt|lge|leq|lne))\\b"
   - identifier.class: "\\b(?i:(backspace|detach|eject|endfile|input|output|rewind|set))\\b"
-  - identifier.class: "\\b(?i:(clear|collect|dump))\\b"
   - identifier.class: "\\b(?i:(date|exit|host|setexit|stoptr|time|trace))\\b"
   - identifier.class: "\\b(?i:(apply|arg|datatype|define|load|local|opsyn|unload))\\b"
   - identifier.class: "\\b(?i:(char|dupl|lpad|replace|rename|reverse|rpad|size|trim))\\b"
   - identifier.class: "\\b(?i:(assign|match|not_match|nInc|nDec|nPush|nPop|Push|Pop|Top|PushCounter|PopCounter|TopCounter|IncCounter|DecCounter|UTFLEN|UTFSUBSTR))\\b"
   - identifier.class: "\\b(?i:(freeze|thaw))\\b"
   - identifier.class: "\\b(?i:(io_findunit))\\b"
+  - identifier.class: "\\b(?i:(collect|dump))\\b"
 
   # Snobol4+ real functions
   - identifier.class: "\\b(?i:(exp|log|chop))\\b"
